Subiendo 2do Reto Kanterita

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -134,3 +134,12 @@ td{
 .containerSecundario{
   text-align: center;
 }
+
+/*  FONDO  */
+/*
+body{
+
+  background: url(../images/inicio.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}*/
